--- a/site/resources/styles/core/core-values.less
+++ b/site/resources/styles/core/core-values.less
@@ -161,6 +161,8 @@
 @grid_standard_tile_width: 450px;
 @grid_large_tile_width: 600px;
 
+@min-width-for-columns: 600px;
+
 @body_font_size: 16px;
 
 @standard_font_size: 100%;
