--- a/site/resources/styles/core/menus.less
+++ b/site/resources/styles/core/menus.less
@@ -194,3 +194,18 @@ button + .menu-items.buttons,
   padding: 10px;
   margin: -10px;
 }
+
+.toc
+{
+  line-height: @text_flow_line_height;
+
+  > ul,
+  > ol
+  {
+    display: block;
+    list-style: none;
+    margin-left: 0;
+    padding-left: 0;
+  }
+}
+
