--- a/site/resources/styles/core/form-layout-top.less
+++ b/site/resources/styles/core/form-layout-top.less
@@ -4,12 +4,12 @@
 {
   fieldset
   {
-    padding-right: 0px;
-    margin-right: 0px;
+    padding-right: 0;
+    margin-right: 0;
 
     fieldset
     {
-      border-right-width: 0px;
+      border-right-width: 0;
     }
   }
 
