--- a/site/resources/styles/themes/blue_tan.css
+++ b/site/resources/styles/themes/blue_tan.css
@@ -843,6 +843,17 @@ pre > code .attribute-value,
   line-height: 160%;
   text-align: left;
 }
+.text-flow.wide {
+  column-width: 30em;
+  -webkit-column-width: 30em;
+  -moz-column-width: 30em;
+  column-rule: 1px solid #cccccc;
+  -webkit-column-rule: 1px solid #cccccc;
+  -moz-column-rule: 1px solid #cccccc;
+  column-gap: 30px;
+  -webkit-column-gap: 30px;
+  -moz-column-gap: 30px;
+}
 .text-flow ul:not([class]),
 .text-flow ol:not([class]) {
   margin-left: 0;
