Make columns apply only after viewport is 75em

--- a/site/resources/styles/core/core-values.less
+++ b/site/resources/styles/core/core-values.less
@@ -24,10 +24,19 @@
 @text_flow_line_height: 160%;
 @compressed_text_flow_line_height: 130%;
 @info_box_line_height: @text_flow_line_height;
-@text_flow_column_width: 30em;
 
 @page_max_width: 100%;
 @page_min_width: 0%;
+
+@min-width-for-columns: 600px;
+
+@text_flow_column_width: 35em;
+@min-width-for-text-columns: 75em;
+
+@grid_tiny_tile_width: 200px;
+@grid_small_tile_width: 300px;
+@grid_standard_tile_width: 450px;
+@grid_large_tile_width: 600px;
 
 @background_color: white;
 @text_color: #333;
@@ -155,13 +164,6 @@
 @form_text_color: @text_color;
 @form_background_url: '';
 @form_background_color: transparent;
-
-@grid_tiny_tile_width: 200px;
-@grid_small_tile_width: 300px;
-@grid_standard_tile_width: 450px;
-@grid_large_tile_width: 600px;
-
-@min-width-for-columns: 600px;
 
 @body_font_size: 16px;
 
