--- a/site/resources/styles/core/text.less
+++ b/site/resources/styles/core/text.less
@@ -195,11 +195,14 @@ pre > code,
   line-height: @text_flow_line_height;
   text-align: left;
 
-  &.wide
+  @media screen and (min-width: @min-width-for-columns)
   {
-    .column-width(@text_flow_column_width);
-    .column-rule(@hairline_border_width, solid, @standard_border_color);
-    .column-gap(2 * @standard_spacing);
+    &.wide
+    {
+      .column-width(@text_flow_column_width);
+      .column-rule(@hairline_border_width, solid, @standard_border_color);
+      .column-gap(2 * @standard_spacing);
+    }
   }
 
   ul:not([class]),
