--- a/site/resources/styles/themes/blue_tan.css
+++ b/site/resources/styles/themes/blue_tan.css
@@ -835,16 +835,18 @@ pre > code .attribute-value,
   line-height: 160%;
   text-align: left;
 }
-.text-flow.wide {
-  column-width: 30em;
-  -webkit-column-width: 30em;
-  -moz-column-width: 30em;
-  column-rule: 1px solid #cccccc;
-  -webkit-column-rule: 1px solid #cccccc;
-  -moz-column-rule: 1px solid #cccccc;
-  column-gap: 30px;
-  -webkit-column-gap: 30px;
-  -moz-column-gap: 30px;
+@media screen and (min-width: 600px) {
+  .text-flow.wide {
+    column-width: 35em;
+    -webkit-column-width: 35em;
+    -moz-column-width: 35em;
+    column-rule: 1px solid #cccccc;
+    -webkit-column-rule: 1px solid #cccccc;
+    -moz-column-rule: 1px solid #cccccc;
+    column-gap: 30px;
+    -webkit-column-gap: 30px;
+    -moz-column-gap: 30px;
+  }
 }
 .text-flow ul:not([class]),
 .text-flow ol:not([class]) {
